--- a/data_prep/antibody_antigen_template.cfg
+++ b/data_prep/antibody_antigen_template.cfg
@@ -2,6 +2,7 @@
 # ====================================================================
 # Antibody-Antigen Docking with HADDOCK3
 # Source: https://github.com/haddocking/haddock3/blob/main/examples/docking-antibody-antigen/docking-antibody-antigen-CDR-NMR-CSP-full.cfg
+# NOTE: THIS HAS BEEN MODIFIED SO THAT IT CAN BE USED AS A TEMPLATE IN PYTHON
 
 # directory in which the scoring will be done
 run_dir = "run1-CDR-NMR-CSP-full"
