Fix strings in .cfg file generation

--- a/data_prep/TEST_config.cfg
+++ b/data_prep/TEST_config.cfg
@@ -9,33 +9,33 @@ molecules = ['data/TEST_ANTIBODY.pdb', 'data/TEST_ANTIGEN.pdb']
 
 [rigidbody]
 tolerance = 5
-ambig_fname = data/ambig_TEST.tbl
-unambig_fname = data/unambig_TEST.tbl
+ambig_fname = "data/ambig_TEST.tbl"
+unambig_fname = "data/unambig_TEST.tbl"
 
 [caprieval]
-reference_fname = data/TEST_MATCHED.pdb
+reference_fname = "data/TEST_MATCHED.pdb"
 
 [seletop]
 select = 200
 
 [caprieval]
-reference_fname = data/TEST_MATCHED.pdb
+reference_fname = "data/TEST_MATCHED.pdb"
 
 [flexref]
 tolerance = 5
-ambig_fname = data/ambig_TEST.tbl
-unambig_fname = data/unambig_TEST.tbl
+ambig_fname = "data/ambig_TEST.tbl"
+unambig_fname = "data/unambig_TEST.tbl"
 
 [caprieval]
-reference_fname = data/TEST_MATCHED.pdb
+reference_fname = "data/TEST_MATCHED.pdb"
 
 [emref]
 tolerance = 5
-ambig_fname = data/ambig_TEST.tbl
-unambig_fname = data/unambig_TEST.tbl
+ambig_fname = "data/ambig_TEST.tbl"
+unambig_fname = "data/unambig_TEST.tbl"
 
 [caprieval]
-reference_fname = data/TEST_MATCHED.pdb
+reference_fname = "data/TEST_MATCHED.pdb"
 
 [clustfcc]
 
@@ -43,5 +43,5 @@ reference_fname = data/TEST_MATCHED.pdb
 top_models = 4
 
 [caprieval]
-reference_fname = data/TEST_MATCHED.pdb
+reference_fname = "data/TEST_MATCHED.pdb"
 
