--- a/scripts/3_experiment_generation/antibody_antigen_template.cfg
+++ b/scripts/3_experiment_generation/antibody_antigen_template.cfg
@@ -33,7 +33,7 @@ tolerance = 5
 # CDR to surface ambig restraints
 ambig_fname = "data/ambig-CDR-NMR-CSP.tbl"
 # Restraints to keep the antibody chains together
-unambig_fname = "data/unambig.tbl"
+# unambig_fname = "data/unambig.tbl"
 
 [caprieval_1]
 reference_fname = "data/4G6M-matched.pdb"
@@ -49,7 +49,7 @@ tolerance = 5
 # CDR to surface ambig restraints
 ambig_fname = "data/ambig-CDR-NMR-CSP.tbl"
 # Restraints to keep the antibody chains together
-unambig_fname = "data/unambig.tbl"
+# unambig_fname = "data/unambig.tbl"
 
 [caprieval_3]
 reference_fname = "data/4G6M-matched.pdb"
@@ -59,7 +59,7 @@ tolerance = 5
 # CDR to surface ambig restraints
 ambig_fname = "data/ambig-CDR-NMR-CSP.tbl"
 # Restraints to keep the antibody chains together
-unambig_fname = "data/unambig.tbl"
+# unambig_fname = "data/unambig.tbl"
 
 [caprieval_4]
 reference_fname = "data/4G6M-matched.pdb"
