--- a/data/experiments/TEST_5A3I/config.cfg
+++ b/data/experiments/TEST_5A3I/config.cfg
@@ -3,38 +3,38 @@ run_dir = "./output"
 mode = "local"
 # concat = 5
 # queue_limit = 100
-molecules = ['5a3i_chainsHandL_renumberedLplus1000.pdb', '5a3i_chainA.pdb']
+molecules = ['5a3i_chainsHandL_renumberedLplus1000_onechainA.pdb', '5a3i_chainA_rechainedasB.pdb']
 
 [topoaa]
 
 [rigidbody]
-tolerance = 50
-sampling = 100
-# ambig_fname = "ambig.tbl"
+tolerance = 25
+sampling = 200
+ambig_fname = "ambig.tbl"
 # unambig_fname = "unambig.tbl"
 # ranair = true
 # turn on random definiton of AIRs
-ranair = true
+# ranair = true
 # for antibody sample only CDR loops
-nrair_1 = 6
-rair_sta_1_1 = 26
-rair_end_1_1 = 32
-rair_sta_1_2 = 55
-rair_end_1_2 = 57
-rair_sta_1_3 = 101
-rair_end_1_3 = 108
-rair_sta_1_4 = 146
-rair_end_1_4 = 152
-rair_sta_1_5 = 170
-rair_end_1_5 = 172
-rair_sta_1_6 = 212
-rair_end_1_6 = 215
+# nrair_1 = 6
+# rair_sta_1_1 = 26
+# rair_end_1_1 = 32
+# rair_sta_1_2 = 55
+# rair_end_1_2 = 57
+# rair_sta_1_3 = 101
+# rair_end_1_3 = 108
+# rair_sta_1_4 = 146
+# rair_end_1_4 = 152
+# rair_sta_1_5 = 170
+# rair_end_1_5 = 172
+# rair_sta_1_6 = 212
+# rair_end_1_6 = 215
 
 # [caprieval]
 # reference_fname = "5a3i_chainsACD.pdb"
 
-# [seletop]
-# select = 200
+[seletop]
+select = 200
 
 # [caprieval]
 # reference_fname = "5a3i_chainsACD.pdb"
