Add first three experiments

--- a/scripts/3_experiment_generation/antibody_antigen_template_custom.cfg
+++ b/scripts/3_experiment_generation/antibody_antigen_template_custom.cfg
@@ -30,14 +30,14 @@ tolerance = 25
 sampling = 200
 ambig_fname = "ambig.tbl"
 
-[seletop]
+[seletop_0]
 select = 50
 
 [flexref]
 tolerance = 25
 ambig_fname = "ambig.tbl"
 
-[seletop]
+[seletop_1]
 select = 10
 
 [mdref]
