Fix config.cfg generation to use mdref

--- a/data/experiments/H5.3__EPI2800361/config.cfg
+++ b/data/experiments/H5.3__EPI2800361/config.cfg
@@ -9,6 +9,7 @@ molecules = ['4xrc_chainsAandB_renumberedLplus1000_oneAchain.pdb', 'EPI2800361_r
 
 [rigidbody]
 tolerance = 5
+sampling = 200
 ambig_fname = "ambig.tbl"
 
 [seletop]
@@ -22,12 +23,8 @@ ambig_fname = "ambig.tbl"
 select = 10
 
 [mdref]
-tolerance = 25
+tolerance = 5
 ambig_fname = "ambig.tbl"
 
 [caprieval]
-
-[emref]
-tolerance = 5
-ambig_fname = "ambig.tbl"
 
