--- a/data/experiments/13D4__EPI687187/config.cfg
+++ b/data/experiments/13D4__EPI687187/config.cfg
@@ -9,6 +9,7 @@ molecules = ['6A0Z_chainsHandL_renumberedLplus1000_oneAchain.pdb', 'EPI687187_re
 
 [rigidbody]
 tolerance = 5
+sampling = 200
 ambig_fname = "ambig.tbl"
 
 [seletop]
@@ -22,12 +23,8 @@ ambig_fname = "ambig.tbl"
 select = 10
 
 [mdref]
-tolerance = 25
+tolerance = 5
 ambig_fname = "ambig.tbl"
 
 [caprieval]
-
-[emref]
-tolerance = 5
-ambig_fname = "ambig.tbl"
 
