--- a/scripts/3_experiment_generation/antibody_antigen_template_custom.cfg
+++ b/scripts/3_experiment_generation/antibody_antigen_template_custom.cfg
@@ -9,10 +9,11 @@ run_dir = "./output"
 
 # execution mode
 mode = "local"
+ncores = 36
 # concatenate models inside each job, concat = 5 each .job will produce 5 models
-concat = 5
+# concat = 5
 #  Limit the number of concurrent submissions to the queue
-queue_limit = 100
+# queue_limit = 100
 
 # molecules to be docked
 molecules =  [
@@ -26,23 +27,25 @@ molecules =  [
 [topoaa]
 
 [rigidbody]
-tolerance = 25
+tolerance = 5
 sampling = 200
 ambig_fname = "ambig.tbl"
 
-[seletop_0]
+[seletop]
 select = 50
 
 [flexref]
-tolerance = 25
+tolerance = 5
 ambig_fname = "ambig.tbl"
 
-[seletop_1]
-select = 10
+[seletopclusts]
+top_cluster = 1
 
 [mdref]
-tolerance = 25
+tolerance = 5
 ambig_fname = "ambig.tbl"
+
+[mdscoring]
 
 [caprieval]
 
