--- a/data/experiments/TEST2_5A3I/config.cfg
+++ b/data/experiments/TEST2_5A3I/config.cfg
@@ -20,10 +20,10 @@ select = 50
 tolerance = 5
 ambig_fname = "ambig.tbl"
 
-[seletop]
-select = 10
-# [seletopclusts]
-# top_cluster = 1
+# [seletop]
+# select = 10
+[seletopclusts]
+top_cluster = 1
 
 [mdref]
 tolerance = 5
