--- a/scripts/3_experiment_generation/antibody_antigen_template_custom.cfg
+++ b/scripts/3_experiment_generation/antibody_antigen_template_custom.cfg
@@ -24,6 +24,7 @@ molecules =  [
 # ====================================================================
 # Parameters for each stage are defined below, prefer full paths
 # ====================================================================
+
 [topoaa]
 
 [rigidbody]
@@ -31,21 +32,31 @@ tolerance = 5
 sampling = 200
 ambig_fname = "ambig.tbl"
 
-[seletop]
-select = 50
+[clustfcc_0]
+threshold = 10
+
+[seletopclusts_0]
+top_cluster = 5
+top_models = 10
 
 [flexref]
 tolerance = 5
 ambig_fname = "ambig.tbl"
 
-[seletopclusts]
+[clustfcc_1]
+threshold = 10
+
+[seletopclusts_1]
 top_cluster = 1
+top_models = 10
 
 [mdref]
 tolerance = 5
 ambig_fname = "ambig.tbl"
 
 [mdscoring]
+
+[clustfcc_2]
 
 [caprieval]
 
