--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Byte-compiled / optimized / DLL files
+## Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
+## C extensions
 *.so
 
-# Distribution / packaging
+## Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -26,17 +26,17 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+## PyInstaller
+##  Usually these files are written by a python script from a template
+##  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
-# Installer logs
+## Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+## Unit test / coverage reports
 htmlcov/
 .tox/
 .nox/
@@ -51,75 +51,75 @@ coverage.xml
 .pytest_cache/
 cover/
 
-# Translations
+## Translations
 *.mo
 *.pot
 
-# Django stuff:
+## Django stuff:
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+## Flask stuff:
 instance/
 .webassets-cache
 
-# Scrapy stuff:
+## Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+## Sphinx documentation
 docs/_build/
 
-# PyBuilder
+## PyBuilder
 .pybuilder/
 target/
 
-# Jupyter Notebook
+## Jupyter Notebook
 .ipynb_checkpoints
 
-# IPython
+## IPython
 profile_default/
 ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+## pyenv
+##   For a library or package, you might want to ignore these files since the code is
+##   intended to run in multiple environments; otherwise, check them in:
+## .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
+## pipenv
+##   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+##   However, in case of collaboration, if having platform-specific dependencies or dependencies
+##   having no cross-platform support, pipenv may install dependencies that don't work, or not
+##   install all needed dependencies.
 #Pipfile.lock
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+## poetry
+##   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+##   This is especially recommended for binary packages to ensure reproducibility, and is more
+##   commonly ignored for libraries.
+##   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
 #poetry.lock
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+## pdm
+##   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
 #pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
+##   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+##   in version control.
+##   https://pdm.fming.dev/#use-with-ide
 .pdm.toml
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+## PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
-# Celery stuff
+## Celery stuff
 celerybeat-schedule
 celerybeat.pid
 
-# SageMath parsed files
+## SageMath parsed files
 *.sage.py
 
-# Environments
+## Environments
 .env
 .venv
 env/
@@ -128,34 +128,60 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+## Spyder project settings
 .spyderproject
 .spyproject
 
-# Rope project settings
+## Rope project settings
 .ropeproject
 
-# mkdocs documentation
+## mkdocs documentation
 /site
 
-# mypy
+## mypy
 .mypy_cache/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
+## Pyre type checker
 .pyre/
 
-# pytype static type analyzer
+## pytype static type analyzer
 .pytype/
 
-# Cython debug symbols
+## Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+## PyCharm
+##  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+##  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+##  and can be added to the global gitignore or merged into this file.  For a more nuclear
+##  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 .DS_Store
+
+
+## HADDOCK 3 unnecesary files
+data/experiments/*/output/data/*
+data/experiments/*/output/00_topoaa/*
+data/experiments/*/output/01_rigidbody/*
+data/experiments/*/output/02_clustfcc/*
+data/experiments/*/output/03_seletopclusts/*
+data/experiments/*/output/04_flexref/*
+data/experiments/*/output/05_clustfcc/*
+data/experiments/*/output/06_seletopclusts/*
+# data/experiments/*/output/07_mdref/*
+data/experiments/*/output/07_mdref/*.inp
+data/experiments/*/output/07_mdref/*.out.gz
+data/experiments/*/output/07_mdref/*.seed
+data/experiments/*/output/07_mdref/io.json
+data/experiments/*/output/07_mdref/params.cfg
+# data/experiments/*/output/08_mdscoring/*
+data/experiments/*/output/08_mdscoring/*.inp
+data/experiments/*/output/08_mdscoring/*.out.gz
+data/experiments/*/output/08_mdscoring/io.json
+data/experiments/*/output/08_mdscoring/params.cfg
+# data/experiments/*/output/09_clustfcc/*
+data/experiments/*/output/09_clustfcc/cluster.out
+data/experiments/*/output/09_clustfcc/io.json
+data/experiments/*/output/09_clustfcc/params.cfg
