--- a/.gitignore
+++ b/.gitignore
@@ -185,4 +185,8 @@ data/*/*/output/08_mdscoring/params.cfg
 data/*/*/output/09_clustfcc/cluster.out
 data/*/*/output/09_clustfcc/io.json
 data/*/*/output/09_clustfcc/params.cfg
+
+## Random stuff
 ~$Experiments.xlsx
+.Rhistory
+*.twbr
